--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,8 +439,8 @@ main {
 }
 
 .social-item .social-link {
-  color: var(--light-gray-70);
-  font-size: 18px;
+  color: var(--orange-yellow-crayola);
+  font-size: 30px;
 }
 
 
