--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -842,6 +842,58 @@ main {
   line-height: 1.6;
 }
 
+/**
+ * bullet-list (based on timeline but no vertical line)
+ */
+
+.bullet-list { margin-bottom: 30px; }
+
+.bullet-list .title-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 25px;
+}
+
+.bullet-list-list {
+  font-size: var(--fs-6);
+  margin-left: 45px;
+}
+
+.bullet-list-item { position: relative; }
+
+.bullet-list-item:not(:last-child) { margin-bottom: 20px; }
+
+.bullet-list-item-title {
+  font-size: var(--fs-6);
+  line-height: 1.3;
+  margin-bottom: 7px;
+}
+
+.bullet-list span {
+  color: var(--vegas-gold);
+  font-weight: var(--fw-400);
+  line-height: 1.6;
+}
+
+.bullet-list-item::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -33px;
+  height: 6px;
+  width: 6px;
+  background: var(--text-gradient-yellow);
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px var(--jet);
+}
+
+.bullet-list-text {
+  color: var(--light-gray);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+}
+
 
 /**
  * skills 
