--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -847,7 +847,10 @@ main {
  * bullet-list (based on timeline but no vertical line)
  */
 
-.bullet-list { margin-bottom: 30px; }
+.bullet-list {
+  margin-bottom: 30px;
+  color: var(--light-gray); 
+}
 
 .bullet-list .title-wrapper {
   display: flex;
@@ -876,6 +879,7 @@ main {
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
+
 
 .bullet-list-item::after {
   content: "";
