--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -869,6 +869,7 @@ main {
 .bullet-list-item:not(:last-child) { margin-bottom: 20px; }
 
 .bullet-list-item-title {
+  color: var(--light-gray);
   font-size: var(--fs-6);
   line-height: 1.3;
   margin-bottom: 7px;
