--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -810,7 +810,7 @@ main {
 }
 
 .timeline-list span {
-  color: var(--vegas-gold);
+  color: var(--light-gray);
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
