--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -876,7 +876,7 @@ main {
 }
 
 .bullet-list span {
-  color: var(--vegas-gold);
+  color: var(--light-gray);
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
